--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,11 @@
 {
   "name": "FinRL Python Environment",
-  "image": "python:3.11-slim-bookworm",
-  "features": {
-    "ghcr.io/devcontainers/features/git:1": {}
-  },
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-python.python",
-        "ms-python.pylint"
-      ]
+  "image": "mcr.microsoft.com/devcontainers/python:3.11",
+  "forwardPorts": [8888],
+  "portsAttributes": {
+    "8888": {
+      "onAutoForward": "notify"
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt",
-  "remoteUser": "root"
+  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && python -m ipykernel install --user --name=finrl-env"
 }
