--- a/.gitpod/automations.yaml
+++ b/.gitpod/automations.yaml
@@ -1,5 +1,6 @@
 tasks:
   install-dependencies:
     name: Install Dependencies
-    init: pip install --no-cache-dir -r requirements.txt && python -m ipykernel install --user --name=finrl-env
-    command: jupyter lab --ip=0.0.0.0 --port=8888 --allow-root --no-browser
+    command: pip install --no-cache-dir -r requirements.txt && python -m ipykernel install --user --name=finrl-env && jupyter lab --ip=0.0.0.0 --port=8888 --allow-root --no-browser
+    triggeredBy:
+      - postDevcontainerStart
