--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,14 @@
 {
   "name": "FinRL Python Environment",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
+  "features": {
+    "ghcr.io/devcontainers/features/git:1": {}
+  },
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y build-essential libta-lib-dev && pip install --no-cache-dir -r requirements.txt && python -m ipykernel install --user --name=finrl-env",
   "forwardPorts": [8888],
   "portsAttributes": {
     "8888": {
       "onAutoForward": "notify"
     }
-  },
-  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && python -m ipykernel install --user --name=finrl-env"
+  }
 }
